@@ -1,3 +1,10 @@
+#0,1,0,20220228
+	Paralax Node tree added "Shader editor/Tools/Append Node Trees/...".
+	Note: Paralax map works on coordinate system and Not suport UVMap yet.
+	Backburner submitter 'Frame per task' miscalculation fixed.
+	Backburner submitter load preset error fixed.
+	Some other minor bug fixed.
+
 #0,1,0,20220222
 	Parent Constraint stuff added to animation Quadmenu 'Alt + RMB'
 	Some minor Bugs Fixed.
